--- a/RLOSF Python Coding Exercise.ipynb
+++ b/RLOSF Python Coding Exercise.ipynb
@@ -43,7 +43,7 @@
     "**Introducing varying noise in the reward:**\n",
     "Noise is the stochastic choice of USER_LIKED_ARTICLE with a small probability of getting the opposite reward instead of choosing it deterministically. Hence with probability of epsilon the opposite reward is chosen and probability of (1-epsilon) the expected reward.\\\n",
     "\\\n",
-    "**Why does noise make sense in our context?**\\\n",
+    "**Why does noise make sense in our context?**\n",
     "Noise makes sense in the this context because even if the user likes sports in the morning generally, sometimes he might dislike it, so this noise helps to model that behaviour."
    ]
   },
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**To incorporate mutiple changes in the reward distribution over time, multiple cost functions are defined with changing preferences**\\\n",
+    "**To incorporate mutiple changes in the reward distribution over time, multiple cost functions are defined with changing preferences**\n",
     "For example: Tom might be keen on watching politics in the morning if there is an election taking place however would be keen on watching sports in the morning if the Olympic Games are being held."
    ]
   },
